@@ -123,6 +123,7 @@ import com.redhat.rhn.taskomatic.task.systems.SystemsOverviewUpdateWorker;
 import com.suse.manager.model.maintenance.MaintenanceSchedule;
 import com.suse.manager.reactor.messaging.ApplyStatesEventMessage;
 import com.suse.manager.reactor.messaging.ChannelsChangedEventMessage;
+import com.suse.manager.reactor.messaging.ChannelsChangedEventMessageAction;
 import com.suse.manager.reactor.utils.ValueMap;
 import com.suse.manager.ssl.SSLCertData;
 import com.suse.manager.ssl.SSLCertGenerationException;
@@ -226,7 +227,7 @@ public class SystemManager extends BaseManager {
         List<SystemIDInfo> systemIDInfos =
                 this.serverFactory.lookupSystemsVisibleToUserWithEntitlement(user, entitlement);
 
-        List<Long> systemIDs = systemIDInfos.stream().map(SystemIDInfo::getSystemID).collect(Collectors.toList());
+        List<Long> systemIDs = systemIDInfos.stream().map(SystemIDInfo::getSystemID).toList();
 
         Map<Long, List<SystemGroupID>> managedGroupsPerServer =
                 this.serverGroupFactory.lookupManagedSystemGroupsForSystems(systemIDs);
@@ -234,7 +235,7 @@ public class SystemManager extends BaseManager {
         return systemIDInfos.stream()
                 .map(s -> new SystemGroupsDTO(s.getSystemID(),
                         managedGroupsPerServer.getOrDefault(s.getSystemID(), new ArrayList<>())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -246,7 +247,7 @@ public class SystemManager extends BaseManager {
         if (!Config.get().getBoolean(ConfigDefaults.TAKE_SNAPSHOTS)) {
             return;
         }
-        List<Long> serverIds = servers.stream().map(Server::getId).collect(Collectors.toList());
+        List<Long> serverIds = servers.stream().map(Server::getId).toList();
         List<Long> snapshottableServerIds = filterServerIdsWithFeature(serverIds, "ftr_snapshotting");
 
         // If the server is null or doesn't have the snapshotting feature, don't bother.
@@ -503,11 +504,11 @@ public class SystemManager extends BaseManager {
         Set<String> hwAddrs = hwAddress.map(Collections::singleton).orElse(emptySet());
         List<MinionServer> matchingProfiles = findMatchingEmptyProfiles(hostname, hwAddrs);
         if (!matchingProfiles.isEmpty()) {
-            throw new SystemsExistException(matchingProfiles.stream().map(Server::getId).collect(Collectors.toList()));
+            throw new SystemsExistException(matchingProfiles.stream().map(Server::getId).toList());
         }
 
         String uniqueId = SystemManagerUtils.createUniqueId(
-                Arrays.asList(hwAddress, hostname).stream().flatMap(Opt::stream).collect(Collectors.toList()));
+                Arrays.asList(hwAddress, hostname).stream().flatMap(Opt::stream).toList());
 
         MinionServer server = new MinionServer();
         server.setName(systemName);
@@ -1702,7 +1703,7 @@ public class SystemManager extends BaseManager {
         params.put("feature", feat);
 
         DataResult<Map<String, Long>> result = m.execute(params, sids);
-        return result.stream().map(Map::values).flatMap(Collection::stream).collect(Collectors.toList());
+        return result.stream().map(Map::values).flatMap(Collection::stream).toList();
     }
 
     /**
@@ -2919,7 +2920,7 @@ public class SystemManager extends BaseManager {
         SelectMode mode = ModeFactory.getMode("System_queries", "system_ids");
         Map<String, Object> params = new HashMap<>();
         DataResult<Map<String, Object>> dr = mode.execute(params);
-        return dr.stream().map(data -> (Long)data.get("id")).collect(Collectors.toList());
+        return dr.stream().map(data -> (Long)data.get("id")).toList();
     }
 
     /**
@@ -3624,8 +3625,10 @@ public class SystemManager extends BaseManager {
     }
 
     /**
-     * Update the the base and child channels of a server. Calls
+     * Update the base and child channels of a server. Calls
      * the {@link UpdateBaseChannelCommand} and {@link UpdateChildChannelsCommand}.
+     * This method regenerate the Tokens and Pillar Data synchronous, but does not
+     * trigger a 'state.apply' for channels.
      *
      * @param user the user changing the channels
      * @param server the server for which to change channels
@@ -3633,7 +3636,7 @@ public class SystemManager extends BaseManager {
      * @param childChannels the full list of child channels to set. Any channel no provided will be unsubscribed.
      * and will be used when regenerating the Pillar data for Salt minions.
      */
-    public static void updateServerChannels(User user,
+    public void updateServerChannels(User user,
                                             Server server,
                                             Optional<Channel> baseChannel,
                                             Collection<Channel> childChannels) {
@@ -3662,7 +3665,11 @@ public class SystemManager extends BaseManager {
         childChannelsCommand.skipChannelChangedEvent(true);
         childChannelsCommand.store();
 
-        MessageQueue.publish(new ChannelsChangedEventMessage(server.getId(), user.getId()));
+        // Calling this asynchronous block execution util main thread close the Hibernate Session
+        // as we require the result, we must call this synchronous
+        ChannelsChangedEventMessageAction channelsChangeAction =
+                new ChannelsChangedEventMessageAction(saltApi);
+        channelsChangeAction.execute(new ChannelsChangedEventMessage(server.getId(), user.getId()));
 
     }
 
@@ -3856,7 +3863,10 @@ public class SystemManager extends BaseManager {
                 return existingCredentials;
             })
             .orElseGet(() -> {
-                String username = "hermes_" + RandomStringUtils.random(8, 0, 0, true, false, null, new SecureRandom());
+                String randomSuffix = RandomStringUtils.random(8, 0, 0, true, false, null, new SecureRandom());
+                // Ensure the username is stored lowercase in the database, since the script uyuni-setup-reportdb-user
+                // will convert it to lowercase anyway
+                String username = "hermes_" + randomSuffix.toLowerCase();
 
                 ReportDBCredentials reportCredentials = CredentialsFactory.createReportCredentials(username, password);
                 CredentialsFactory.storeCredentials(reportCredentials);
